# sawahsense

./: .gitignore  README.md  demo.MD  next.config.ts  package.json  pnpm-lock.yaml  sawahsense.code-workspace  video-demo.md
app/: layout.tsx  page.tsx
app/api/gee-indices/: route.ts
app/api/pak-tani/: route.ts
app/api/send-whatsapp/: route.ts
backend/: generate_demo_heatmap.py  generate_heatmaps.py  ingest.py  main.py  pyproject.toml
backend/chroma_db/: chroma.sqlite3
backend/knowledge_base/: fertilizer_guide.md  paddy_stages.md  pests_diseases.md  soil_preparation.md  water_management.md  weather_response.md
frontend/: eslint.config.mjs  next.config.ts  package.json
frontend/app/: globals.css  page.tsx
frontend/public/demo-tiles/: bounds.json
frontend/public/locales/en/: translation.json
frontend/public/locales/ms/: translation.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  provider.tsx
frontend/src/app/demo/: page.tsx
frontend/src/components/: Navbar.tsx
frontend/src/config/: app-config.ts
frontend/src/data/: alertRules.js  demoFields.js  pakTaniDemoQnA.js  suggestedQuestions.js
frontend/src/hooks/: use-app-language.ts  use-mobile.ts  usePakTani.js
frontend/src/lib/: i18n.ts
frontend/src/types/: index.ts
public/locales/en/: translation.json
src/components/BottomPanel/: DateCarousel.tsx
src/components/Map/: MapContainer.tsx  PakTaniAmbientCard.tsx
src/components/Sidebar/: AlertsTab.tsx  FieldsTab.tsx
src/data/: alertRules.js  suggestedQuestions.js
src/hooks/: useFieldData.js  useGDD.js
src/types/: css.d.ts
(+38 files in other folders)
